--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,13 +37,13 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/editText2"
+        android:textColorHint="#ffff299f"
+        android:hint="Password"
         android:layout_below="@+id/editText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_alignRight="@+id/editText"
-        android:layout_alignEnd="@+id/editText"
-        android:textColorHint="#ffff299f"
-        android:hint="Password" />
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 
@@ -57,7 +57,7 @@
         android:onClick="sendMessage"
         android:clickable="true"
         android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/textview" />
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
@@ -65,8 +65,9 @@
         android:text="Reset"
         android:id="@+id/button2"
 
-        android:layout_alignTop="@+id/button"
-        android:layout_alignEnd="@+id/textview" />
+        android:layout_below="@+id/button"
+        android:layout_alignLeft="@+id/button"
+        android:layout_alignStart="@+id/button" />
 
 
 </RelativeLayout>
