--- a/app/src/main/res/layout/activity_operation_workflow.xml
+++ b/app/src/main/res/layout/activity_operation_workflow.xml
@@ -1,4 +1,12 @@
 <android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/pager"
     android:layout_width="match_parent" android:layout_height="match_parent"
-    tools:context="com.flipkart.age_of_sellers.Operation_workflow" />
+    tools:context="com.flipkart.age_of_sellers.Operation_workflow" >
+
+    <!-- As the main content view, the view below consumes the entire
+         space available using match_parent in both dimensions. -->
+    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+</android.support.v4.view.ViewPager>
+
